--- a/deep_neural_network/deep_nn.ipynb
+++ b/deep_neural_network/deep_nn.ipynb
@@ -2,24 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e2e5ddb7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-03 17:12:34.863559: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a22ca7f3",
+   "cell_type": "markdown",
+   "id": "07134340",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "An activation function in a neural network is a mathematical function applied to the output of a neuron. It introduces non-linearity, enabling the model to learn and represent complex data patterns. Without it, even a deep neural network would behave like a simple linear regression model. Activation functions decide whether a neuron should be activated based on the weighted sum of inputs and a bias term. They also make backpropagation possible by providing gradients for weight updates.\n",
+    "\n",
+    "\n",
+    "<img src=\"https://media.geeksforgeeks.org/wp-content/uploads/20250528125143444422/Activation-functions-in-Neural-Networks.webp\" width=\"480\">\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc7fd7f5",
+   "metadata": {},
+   "source": [
+    "Mathematical Example\n",
+    "\n",
+    "Consider a neural network with:\n",
+    "\n",
+    "Inputs: i1, i2​\n",
+    "\n",
+    "Hidden layer: neurons h1​ and h2​\n",
+    "\n",
+    "Output layer: one neuron (output)\n",
+    "\n",
+    "Weights: w1, w2, w3, w4, w5, w6\n",
+    "\n",
+    "Biases: b1​ for hidden layer, b2​ for output layer\n",
+    "\n",
+    "<img src=\"https://media.geeksforgeeks.org/wp-content/uploads/20251008111720824060/Activation_function.webp\" width=\"480\">\n",
+    "\n",
+    "\n",
+    "The hidden layer outputs are:\n",
+    "\n",
+    "h1 = i1 * w1 + i2 * w3 + b1\n",
+    "\n",
+    "h2 = i1 * w2 + i2 * w4 + b2 \n",
+    "\n",
+    "The output before activation is:\n",
+    "\n",
+    "output = h1 * w5 + h2 * w6 + bias\n",
+    "\n",
+    "\n",
+    "Without activation, these are linear equations.\n",
+    "\n",
+    "\n",
+    "To introduce non-linearity, we apply a sigmoid activation:\n",
+    "\n",
+    "final output = σ(h1 * w5 + h2 * w6 + bias)\n",
+    "\n",
+    "\n",
+    "This gives the final output of the network after applying the sigmoid activation function in output layers, introducing the desired non-linearity.\n",
+    "\n",
+    "\n",
+    "​\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
