--- a/deep_neural_network/activation_functions.ipynb
+++ b/deep_neural_network/activation_functions.ipynb
@@ -67,9 +67,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "41cc85fa",
+   "metadata": {},
+   "source": [
+    "ELU (Exponential Linear Unit)\n",
+    "ELU is designed to improve learning by reducing the vanishing gradient problem for negative inputs.\n",
+    "\n",
+    "Smooth curve — unlike ReLU which has a sharp corner at 0.\n",
+    "\n",
+    "Negative outputs — mean activations closer to zero, which speeds up learning.\n",
+    "\n",
+    "Non-zero gradient for negative x — prevents neurons from dying.\n",
+    "\n",
+    "Reduces bias shift in the network, improving convergence.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "442293e5",
+   "id": "3542db0b",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -77,6 +94,23 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ddcd17b",
+   "metadata": {},
+   "source": [
+    "SELU (Scaled Exponential Linear Unit)  \n",
+    "\n",
+    "SELU is a scaled version of ELU designed to enable self-normalizing neural networks, i.e., activations automatically maintain zero mean and unit variance during forward propagation.\n",
+    "\n",
+    "\n",
+    "Self-normalizing — outputs maintain zero mean and unit variance, improving stability.\n",
+    "\n",
+    "Non-zero gradient for negative inputs — avoids dead neurons.\n",
+    "\n",
+    "Works best with deep feedforward networks, using LeCun normal initialization."
+   ]
   }
  ],
  "metadata": {
