--- a/artificial_nearal_network/artificial_nn.ipynb
+++ b/artificial_nearal_network/artificial_nn.ipynb
@@ -6,12 +6,36 @@
    "id": "d34ca1c2",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import tensorflow as tf "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1340583d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7058e6b8",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
