--- a/end_to_end_ml_project/california.ipynb
+++ b/end_to_end_ml_project/california.ipynb
@@ -200,7 +200,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.10.11)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -214,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
