added some thibngs

--- a/artificial_nearal_network/artificial_nn.ipynb
+++ b/artificial_nearal_network/artificial_nn.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d34ca1c2",
+   "execution_count": 4,
+   "id": "7058e6b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1340583d",
+   "cell_type": "markdown",
+   "id": "ea06a31e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"https://www.researchgate.net/profile/Bojan-Lukic/publication/351547862/figure/fig2/AS:1022913150996480@1620892908389/ANNs-performing-simple-logical-computations-2.ppm\" width=\"480\">\n",
+    "\n",
+    "* if neuron A is activated, then neuron C gets acitvated as well(since it receives two input signals from neuron A) ; but if neuron A is off, then neuron C is off\n",
+    "as well.\n",
+    "\n",
+    "* The second network performs a logical AND: neuron C is activated only when both neurons A and B are activated (a single input signal is not enough to activate neuron C).\n",
+    "\n",
+    "* The third network performs a logical OR: neuron C gets activated if either neuron A or neuron B is activated (or both).\n",
+    "\n",
+    "* Finally, if we suppose that an input connection can inhibit the neuron’s\n",
+    "activity (which is the case with biological neurons), then the fourth\n",
+    "network computes a slightly more complex logical proposition: neuron\n",
+    "C is activated only if neuron A is active and neuron B is off. If neuron A\n",
+    "is active all the time, then you get a logical NOT: neuron C is active\n",
+    "when neuron B is off, and vice versa."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7058e6b8",
+   "id": "d3672a1c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -34,7 +48,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.3"
   }
  },
