--- a/end_to_end_ml_project/california.ipynb
+++ b/end_to_end_ml_project/california.ipynb
@@ -2,7 +2,7 @@
    "cells": [
       {
          "cell_type": "code",
-         "execution_count": 1,
+         "execution_count": 19,
          "id": "397e523d",
          "metadata": {},
          "outputs": [],
@@ -16,7 +16,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 2,
+         "execution_count": 20,
          "id": "4bc61194",
          "metadata": {},
          "outputs": [],
@@ -26,7 +26,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 3,
+         "execution_count": 21,
          "id": "8a0ba166",
          "metadata": {},
          "outputs": [
@@ -149,7 +149,7 @@
                      "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
                   ]
                },
-               "execution_count": 3,
+               "execution_count": 21,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -160,7 +160,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 4,
+         "execution_count": 22,
          "id": "deda89cc",
          "metadata": {},
          "outputs": [
@@ -194,7 +194,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 5,
+         "execution_count": 23,
          "id": "d9a87932",
          "metadata": {},
          "outputs": [
@@ -210,7 +210,7 @@
                      "Name: count, dtype: int64"
                   ]
                },
-               "execution_count": 5,
+               "execution_count": 23,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -221,7 +221,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 6,
+         "execution_count": 24,
          "id": "f5828940",
          "metadata": {},
          "outputs": [
@@ -390,7 +390,7 @@
                      "max         500001.000000  "
                   ]
                },
-               "execution_count": 6,
+               "execution_count": 24,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -401,7 +401,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 7,
+         "execution_count": 25,
          "id": "98110d9a",
          "metadata": {},
          "outputs": [
@@ -423,7 +423,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 8,
+         "execution_count": 26,
          "id": "7b6211b2",
          "metadata": {},
          "outputs": [],
@@ -433,7 +433,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 9,
+         "execution_count": 27,
          "id": "adf50020",
          "metadata": {},
          "outputs": [],
@@ -443,7 +443,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 10,
+         "execution_count": 28,
          "id": "b439ce3a",
          "metadata": {},
          "outputs": [
@@ -453,7 +453,7 @@
                      "<Axes: >"
                   ]
                },
-               "execution_count": 10,
+               "execution_count": 28,
                "metadata": {},
                "output_type": "execute_result"
             },
@@ -474,7 +474,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 11,
+         "execution_count": 29,
          "id": "20ed220d",
          "metadata": {},
          "outputs": [],
@@ -487,7 +487,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 12,
+         "execution_count": 30,
          "id": "c5f1db59",
          "metadata": {},
          "outputs": [
@@ -503,7 +503,7 @@
                      "Name: count, dtype: int64"
                   ]
                },
-               "execution_count": 12,
+               "execution_count": 30,
                "metadata": {},
                "output_type": "execute_result"
             }
@@ -514,7 +514,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 13,
+         "execution_count": 31,
          "id": "d5e2f63c",
          "metadata": {},
          "outputs": [],
@@ -525,7 +525,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 14,
+         "execution_count": 32,
          "id": "83113f4e",
          "metadata": {},
          "outputs": [],
@@ -545,7 +545,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 15,
+         "execution_count": 33,
          "id": "c24d0bf1",
          "metadata": {},
          "outputs": [
@@ -555,7 +555,7 @@
                      "<Axes: xlabel='longitude', ylabel='latitude'>"
                   ]
                },
-               "execution_count": 15,
+               "execution_count": 33,
                "metadata": {},
                "output_type": "execute_result"
             },
@@ -585,17 +585,17 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 16,
+         "execution_count": 34,
          "id": "5cb233e4",
          "metadata": {},
          "outputs": [
             {
                "data": {
                   "text/plain": [
-                     "<matplotlib.legend.Legend at 0x1db7959c070>"
+                     "<matplotlib.legend.Legend at 0x1db797a0ca0>"
                   ]
                },
-               "execution_count": 16,
+               "execution_count": 34,
                "metadata": {},
                "output_type": "execute_result"
             },
@@ -630,7 +630,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 17,
+         "execution_count": 35,
          "id": "362ee2b1",
          "metadata": {},
          "outputs": [],
@@ -640,7 +640,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 18,
+         "execution_count": 36,
          "id": "26ab1d66",
          "metadata": {},
          "outputs": [
@@ -659,7 +659,7 @@
                      "Name: median_house_value, dtype: float64"
                   ]
                },
-               "execution_count": 18,
+               "execution_count": 36,
                "metadata": {},
                "output_type": "execute_result"
             }
